# Batch-Folder-Creator

./: .gitignore  README.md  README_zh.md  babel.config.js  index.html  package-lock.json  package.json  vite.config.js  webpack.renderer.config.js  技术开发文档.md
.github/workflows/: release.yml
main/: index.js
public/: index.html  template.xlsx  template_en.xlsx
renderer/: App.jsx  index.jsx
renderer/components/: DirectorySelector.jsx  ExcelImport.jsx
src/: App.jsx  index.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: app.icns
src-tauri/src/: main.rs
src/components/: BatchCreateActions.jsx  CreateActions.jsx  DirectorySelector.jsx  ExcelImport.jsx  FolderTreePreview.jsx
src/hooks/: index.js
src/i18n/: index.js
src/i18n/locales/: en.json  zh.json
src/services/: api.js  excelParser.js
src/store/: index.js
src/types/: index.js
