[package]
name = "folder-creator"
version = "1.0.0"
description = "跨平台文件夹批量创建工具"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["dialog-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
